Removed Batman logo from all pages and fixed homepage layout spacing to eliminate floating elements and improve visual alignment.

--- a/src/pages/styles/homepage.css
+++ b/src/pages/styles/homepage.css
@@ -1,14 +1,7 @@
 @import "../../data/styles.css";
 
-.homepage-logo-container {
-	display: flex;
-	justify-content: left;
-	align-items: center;
-	padding-top: 130px;
-}
-
 .homepage-container {
-	padding-top: 25px;
+	padding-top: 120px;
 }
 
 .homepage-first-area {
@@ -94,13 +87,17 @@
 }
 
 @media (max-width: 1024px) {
+	.homepage-container {
+		padding-top: 80px;
+	}
+
 	.homepage-first-area {
 		flex-direction: column;
 	}
 
 	.homepage-first-area-left-side {
 		display: flex;
-		flex-direction: column; /* Changed: set direction to column */
+		flex-direction: column;
 		align-items: flex-start;
 		width: 100%;
 		order: 2;
@@ -124,8 +121,8 @@
 	}
 
 	.homepage-image-container {
-		padding-top: 50px;
-		padding-bottom: 50px;
+		padding-top: 30px;
+		padding-bottom: 30px;
 		margin-left: 10px;
 		order: 1;
 	}
